--- a/css/styles.css
+++ b/css/styles.css
@@ -11381,7 +11381,7 @@ p.lead {
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
-  margin-right: 1.5;
+  margin-right: 1.5rem;
 }
 .social-icons .social-icon:last-child {
   margin-right: 0;
